Forgot local refs

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,6 +20,7 @@
         ngModel
         name="username"
         required
+        #usernameInput="ngModel"
       >
       <input 
         class="form-control mr-sm-2" 
@@ -28,6 +29,7 @@
         ngModel
         name="password"
         required
+        #pwInput="ngModel"
       >
       <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
