--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand">Dating App</a>
-    <ul class="navbar-nav mr-auto" *ngIf="isLoggedIn">
+    <ul class="navbar-nav mr-auto" *ngIf="currentUser$ | async">
       <li class="nav-item active">
         <a class="nav-link">Matches </a>
       </li>
@@ -12,7 +12,7 @@
         <a class="nav-link" tabindex="-1" aria-disabled="true">Messages</a>
       </li>
     </ul>
-    <div class="dropdown" *ngIf="isLoggedIn" dropdown>
+    <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
@@ -20,7 +20,7 @@
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
-    <form #loginForm="ngForm" (ngSubmit)="onLogin()" *ngIf="!isLoggedIn" class="form-inline my-2 my-lg-0">
+    <form #loginForm="ngForm" (ngSubmit)="onLogin()" *ngIf="!(currentUser$ | async)" class="form-inline my-2 my-lg-0">
       <input 
         class="form-control mr-sm-2" 
         type="text" 
