Adding home component

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -39,7 +39,7 @@
         required
         #pwInput="ngModel"
       >
-      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit" *ngIf="!isLoggedIn">Login</button>
+      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
     </form>
   </div>
 </nav>
