Connecting register method to the register api endpoint

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
       </li>
     </ul>
     <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
-      <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+      <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{username}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
