--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
-  <h2 class="text-center text-primary">Sign-Up</h2>
+  <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
     <input 
