--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand">Dating App</a>
+    <a class="navbar-brand" routerLink="/">Dating App</a>
     <ul class="navbar-nav mr-auto" *ngIf="currentUser$ | async">
-      <li class="nav-item active">
-        <a class="nav-link">Matches </a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/members" routerLinkActive='active'>Matches</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Lists</a>
+        <a class="nav-link" routerLink="/lists"  routerLinkActive='active'>Lists</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" tabindex="-1" aria-disabled="true">Messages</a>
+        <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/messages"  routerLinkActive='active'>Messages</a>
       </li>
     </ul>
     <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
