--- a/src/app/auth/components/nav/nav.component.html
+++ b/src/app/auth/components/nav/nav.component.html
@@ -1,16 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Dating App</a>
-    <ul class="navbar-nav mr-auto" *ngIf="currentUser$ | async">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/members" routerLinkActive='active'>Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/lists"  routerLinkActive='active'>Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/messages"  routerLinkActive='active'>Messages</a>
-      </li>
+    <ul class="navbar-nav mr-auto">
+      <ng-container *ngIf="currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/members" routerLinkActive='active'>Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists"  routerLinkActive='active'>Lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/messages"  routerLinkActive='active'>Messages</a>
+        </li>
+      </ng-container>
     </ul>
     <div class="dropdown" *ngIf="currentUser$ | async" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{username}}</a>
