--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -22,7 +22,7 @@
     >
   </div>
   <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit" [disabled]="registerForm.invalid">Register</button>
-    <button class="btn btn-warning mr-2" type="button" (click)="cancel()">Cancel</button>
+    <button class="btn btn-success mr-2 " type="submit" [disabled]="registerForm.invalid">Register</button>
+    <button class="btn btn- mr-2 btn-sm" type="button" (click)="cancel()">Cancel</button>
   </div>
 </form>
