--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     <h1>Find your match</h1>
     <p class="lead">View your matches.. Just sign up first!</p>
     <div class="text-center">
-      <button class="btn btn-primary btn-lg mr-2" (click)="registerToggle()">Register</button>
-      <button class="btn btn-info btn-lg mr-2">Learn More</button>
+      <button class="btn btn-primary btn-lg mr-2" style="padding: 1.2rem;" (click)="registerToggle()">Register</button>
+      <button class="btn btn-info btn-lg mr-2" style="padding: 1.2rem;">Learn More</button>
     </div>
   </div>
 
