--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  member-list works!
-</p>
+<div class="row">
+  <div *ngFor="let member of members" class="col-2">
+    <p><app-member-card [member]="member"></app-member-card></p>
+  </div>
+</div>
