--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -1,13 +1,30 @@
 <div class="card mb-4">
     <div class="card-img-wrapper">
         <img src="{{member.photoUrl}}" alt="{{member.username}}" class="card-img-top">
+        <ul class="list-inline member-icons animate text-center">
+            <li class="list-inline-item">
+                <button class="btn btn-primary btn-sm">
+                    <i class="fa fa-info-circle"></i>
+                </button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary btn-sm">
+                    <i class="fa fa-heart"></i>
+                </button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary btn-sm">
+                    <i class="fa fa-comment"></i>
+                </button>
+            </li>
+        </ul>
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1">
             <i class="fa fa-user"></i>
             {{member.username}}
         </h6>
-        <p class="card-text text-center">{{member.city}}</p>
+        <p class="card-text text-center">From {{member.city}}</p>
         <!-- <p class="card-text text-center">{{member.skills}}</p> -->
     </div>
 </div>
