Adding token inteceptor

--- a/src/app/auth/components/nav/nav.component.html
+++ b/src/app/auth/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Jhunt</a>
+    <a class="navbar-brand" routerLink="/">Joblink</a>
     <ul class="navbar-nav mr-auto">
       <ng-container *ngIf="currentUser$ | async">
         <li class="nav-item">
