Routing to the details page

--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -3,7 +3,7 @@
         <img src="{{member.photoUrl}}" alt="{{member.username}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <button class="btn btn-primary btn-sm">
+                <button class="btn btn-primary btn-sm" routerLink='/members/{{member.username}}'>
                     <i class="fa fa-info-circle"></i>
                 </button>
             </li>
