Adding member detail html and styling

--- a/src/app/auth/components/nav/nav.component.html
+++ b/src/app/auth/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md fixed-top navbar-dark bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Joblink</a>
     <ul class="navbar-nav mr-auto">
