--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -45,7 +45,14 @@
         <p>{{member.skills}}</p>
       </tab>
       <tab heading="Photos">
-        <p>Photos here</p>
+        <ngx-gallery 
+          [options]="galleryOptions" 
+          [images]="galleryImages"
+          style="display: inline-block; margin-bottom: 20px;"
+          *ngIf="galleryImages.length > 0"
+        >
+        </ngx-gallery>
+        <p *ngIf="galleryImages.length <= 0"> This user hasn't uploaded any photos yet</p>
       </tab>
       <tab heading="Messages">
         <p>Messages here</p>
