--- a/src/app/auth/components/nav/nav.component.html
+++ b/src/app/auth/components/nav/nav.component.html
@@ -17,7 +17,7 @@
     <div class="dropdown" *ngIf="(currentUser$ | async) as user" dropdown>
       <a class="dropdown-toggle text-light" dropdownToggle>Hi, {{user.username}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item">Edit Profile</a>
+        <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
