--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -3,8 +3,8 @@
         <h1>Your profile</h1>
     </div>
     <div class="col-8">
-        <div class="alert alert-info">
-            <p><strong>Information: </strong> You have made some changes. Any unsaved changes will be lost!</p>
+        <div class="alert alert-warning" *ngIf="editForm.dirty">
+            <p><strong>Warning: </strong> Remember to save your changes or they will be lost!</p>
         </div>
     </div>
     <div class="col-4">
@@ -33,14 +33,14 @@
           </div>
         </div>
         <div class="card-footer">
-            <button class="btn btn-success btn-block">Save changes</button>
+            <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-success btn-block">Save changes</button>
         </div>
       </div>
     </div>
     <div class="col-8">
       <tabset class="member-tabset">
         <tab heading="Edit Section">
-            <form>
+            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                 <h4>Description</h4>
                 <textarea 
                     [(ngModel)]="member.bio" 
