--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<ngx-spinner>
+    <h6>Loading...</h6>
+</ngx-spinner>
+
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px;">
     <router-outlet></router-outlet>
