--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -75,7 +75,7 @@
             </form> 
         </tab>
         <tab heading="Edit Photos">
-          <p>Photo edit here</p>
+          <app-photo-editor [member]="member"></app-photo-editor>
         </tab>
       </tabset>
     </div>
