--- a/src/app/members/photo-editor/photo-editor.component.html
+++ b/src/app/members/photo-editor/photo-editor.component.html
@@ -1,11 +1,99 @@
-<div class="row">
-    <div class="col-3" *ngFor="let photo of member.photos">
+<div class="row" *ngIf="!isCollapsed">
+    <div class="col-2" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="User photo" class="img-thumbnail p-1">
-        <div class="text-center">
+        <div class="text-center" id="photo-edit-buttons">
             <button class="btn btn-sm">main</button>
-            <button class="btn btn-sm btn-danger">
-                <i class="fa fa-trash"></i>
+            <button id="delete-button" class="btn btn-sm btn-danger">
+                <i style="color: red;" class="fa fa-trash fa-2x"></i>
             </button>
         </div>
     </div>
 </div>
+
+
+<div class="text-center mt-5" *ngIf="!isCollapsed">
+    <button 
+        type="button"
+        id="add-button" 
+        class="btn btn-outline-success btn-sm" 
+        (click)="toggleCollapse()" 
+        [attr.aria-expanded]="!isCollapsed"
+        aria-controls="collapseExample"
+    >
+    <i class="fa fa-plus-circle fa-3x"></i>
+    </button>
+</div>
+  <div #collapse="ngbCollapse" [(ngbCollapse)]="!isCollapsed">
+    <div class="card">
+      <div class="card-body">
+        <div class="row mt-5">
+            <div class="col-md-3">
+                <h3>Add Photos</h3>
+                <div 
+                    ng2FileDrop
+                    [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
+                    (fileOver)="fileOverBase($event)"
+                    [uploader]="uploader"
+                    class="card bg-faded p-3 text-center mb-3 my-drop-zone"
+                >
+                    <i class="fa fa-upload fa-5x"></i>
+                    Drop photos here.
+                </div>
+                Multiple
+                <input type="file" ng2FileSelect [uploader]="uploader" multiple  /><br/>
+        
+                Single
+                <input type="file" ng2FileSelect [uploader]="uploader" />
+                <button class="btn btn-secondary btn-sm mt-1" (click)="collapse.toggle(isCollapsed)">Back</button>
+            </div>
+            <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
+                <h3>Upload queue</h3>
+                <p>Queue length: {{ uploader?.queue?.length }}</p>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th width="50%">Name</th>
+                        <th>Size</th>
+                        <th>Progress</th>
+                        <th>Status</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let item of uploader.queue">
+                        <td><strong>{{ item?.file?.name }}</strong></td>
+                        <td *ngIf="uploader.options.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
+                        <td *ngIf="uploader.options.isHTML5">
+                            <div class="progress" style="margin-bottom: 0;">
+                                <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': item.progress + '%' }"></div>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div>
+                    <div>
+                        Queue progress:
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-success btn-s mt-2"
+                            (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+                        <span class="fa fa-upload"></span> Upload all
+                    </button>
+                    <button type="button" class="btn btn-warning btn-s mt-2 ml-1"
+                            (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
+                        <span class="fa fa-ban"></span> Cancel all
+                    </button>
+                    <button type="button" class="btn btn-danger btn-s mt-2 ml-1"
+                            (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+                        <span class="fa fa-trash"></span> Remove all
+                    </button>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
