--- a/src/app/members/photo-editor/photo-editor.component.css
+++ b/src/app/members/photo-editor/photo-editor.component.css
@@ -18,6 +18,20 @@ input[type=file] {
     cursor: pointer;
 }
 
+.choose-main-button {
+    border: none;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+.choose-main-button:hover {
+    border: none;
+    color: green;
+    cursor: pointer;
+}
+
+
 #add-button:hover {
     border: none;
     color:darkgreen;
@@ -26,12 +40,30 @@ input[type=file] {
 
 #delete-button:hover {
     border: none;
-    color: lawngreen;
     cursor: pointer;
 }
 
 #photo-edit-buttons {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-direction: row;
 }
+
+input {
+    padding: 3px 3px;
+}
+
+#back-arrow {
+    border: none;
+    background-color: white;
+    color: lightgray;
+    cursor: pointer;
+}
+
+#back-arrow:hover {
+    border: none;
+    color: black;
+    cursor: pointer;
+}
+
