--- a/src/app/members/photo-editor/photo-editor.component.html
+++ b/src/app/members/photo-editor/photo-editor.component.html
@@ -2,7 +2,12 @@
     <div class="col-2" *ngFor="let photo of member.photos">
         <img src="{{photo.url}}" alt="User photo" class="img-thumbnail p-1">
         <div class="text-center" id="photo-edit-buttons">
-            <button class="btn btn-sm">main</button>
+            <button 
+                class="btn btn-sm mb-2"
+                [disabled]="photo.isMain" 
+                (click)="setMainPhoto(photo)"
+                [ngClass]='photo.isMain ? "btn-success active" : "choose-main-button"'
+            >Main</button>
             <button id="delete-button" class="btn btn-sm btn-danger">
                 <i style="color: red;" class="fa fa-trash fa-2x"></i>
             </button>
@@ -26,7 +31,18 @@
   <div #collapse="ngbCollapse" [(ngbCollapse)]="!isCollapsed">
     <div class="card">
       <div class="card-body">
-        <div class="row mt-5">
+        <div class="row d-flex justify-content-start">
+            <button 
+                style="font-size: 15px;"
+                id="back-arrow" 
+                class="btn btn-secondary 
+                btn-sm mb-1" 
+                (click)="collapse.toggle(isCollapsed)"
+            >
+            <i class="fa fa-arrow-left fa-2x"></i>
+            </button>
+        </div>
+        <div class="row mt-5" [ngClass]="(uploader?.queue?.length) ? '' : 'd-flex justify-content-center'">
             <div class="col-md-3">
                 <h3>Add Photos</h3>
                 <div 
@@ -44,7 +60,6 @@
         
                 Single
                 <input type="file" ng2FileSelect [uploader]="uploader" />
-                <button class="btn btn-secondary btn-sm mt-1" (click)="collapse.toggle(isCollapsed)">Back</button>
             </div>
             <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
                 <h3>Upload queue</h3>
