--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,24 +1,28 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
     <input 
       type="text"
       class="form-control"
-      name="username"
+      formControlName="username"
       placeholder="Username"
-      [(ngModel)]="model.username"
-      required
     >
   </div>
   <div class="form-group">
     <input 
       type="password"
       class="form-control"
-      name="password"
+      formControlName="password"
       placeholder="Password"
-      [(ngModel)]="model.password"
-      required
+    >
+  </div>
+  <div class="form-group">
+    <input 
+      type="password"
+      class="form-control"
+      formControlName="confirmPassword"
+      placeholder="Confirm Password"
     >
   </div>
   <div class="form-group text-center">
