--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -2,28 +2,56 @@
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr>
   <div class="form-group">
-    <input 
+    <input
+      [class.is-invalid]="registerForm.get('username').errors && registerForm.get('username').touched" 
       type="text"
       class="form-control"
       formControlName="username"
       placeholder="Username"
     >
+    <div class="invalid-feedback">Please enter a username</div>
   </div>
   <div class="form-group">
     <input 
+      [class.is-invalid]="registerForm.get('password').errors && registerForm.get('password').touched" 
       type="password"
       class="form-control"
       formControlName="password"
       placeholder="Password"
     >
+    <div 
+      *ngIf="registerForm.get('password').hasError('required')" 
+      class="invalid-feedback"
+    >
+    Please enter a password
+    </div>
+    <div 
+      *ngIf="registerForm.get('password').hasError('minlength')" 
+      class="invalid-feedback"
+    >
+    Password must be at least 8 characters
+    </div>
   </div>
   <div class="form-group">
-    <input 
+    <input
+    [class.is-invalid]="registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched"  
       type="password"
       class="form-control"
       formControlName="confirmPassword"
       placeholder="Confirm Password"
     >
+    <div 
+      *ngIf="registerForm.get('confirmPassword').hasError('required')" 
+      class="invalid-feedback"
+    >
+    Please confirm your password
+    </div>
+    <div 
+      *ngIf="registerForm.get('confirmPassword').hasError('isMatching')" 
+      class="invalid-feedback"
+    >
+    Passwords don't match 
+    </div>
   </div>
   <div class="form-group text-center">
     <button class="btn btn-success mr-2 " type="submit" [disabled]="registerForm.invalid">Register</button>
