--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -20,7 +20,11 @@
         </ul>
     </div>
     <div class="card-body p-1">
-        <h6 class="card-title text-center mb-1">
+        <h6 class="card-title text-center mb-1" *ngIf="member.gender === 'employee'">
+            <i class="fa fa-user"></i>
+            {{member.username}}, {{member.age}}
+        </h6>
+        <h6 class="card-title text-center mb-1" *ngIf="member.gender !== 'employee'">
             <i class="fa fa-user"></i>
             {{member.username}}
         </h6>
