--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,3 +1,41 @@
+<div class="text-center mb-3">
+  <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+</div>
+<div class="container mt-3 text-center" *ngIf="user.gender === 'employer'">
+  <form #form="ngForm" class="form-inline  d-flex justify-content-center mb-5" (ngSubmit)="loadMembers()" autocomplete="off">
+    <div class="form-group">
+      <label>Age from: </label>
+      <input
+        id="sas" 
+        type="number" 
+        class="form-control ml-1" 
+        name="minAge"
+        style="width: 80px; height: 40px;" 
+        [(ngModel)]="userParams.minAge"
+      >
+    </div>
+    <div class="form-group px-2">
+      <label>Age to: </label>
+      <input 
+        type="number" 
+        class="form-control ml-1" 
+        style="width: 80px; height: 40px;" 
+        name="maxAge"
+        [(ngModel)]="userParams.maxAge"
+      >
+    </div>
+    <div class="form-group px-2">
+      <label>Show </label>
+      <select name="typeOfUsers" style="width: 139px; height: 40px;" class="form-control ml-1">
+        <option *ngFor="let type of typeOfUsersList" [value]="type.value">
+          {{type.display}}
+        </option>
+      </select>
+    </div>
+    <button id="apply-button" class="btn-sm btn-primary ml-1" type="submit">Apply Filters</button>
+    <button (click)="resetFilters()" class="btn-sm btn-info ml-1" type="submit">Reset Filters</button>
+  </form>
+</div>
 <div class="row">
   <div *ngFor="let member of members" class="col-2">
     <p><app-member-card [member]="member"></app-member-card></p>
@@ -15,6 +53,5 @@
     firstText="&laquo;"
     lastText="&raquo;"
 >
-
 </pagination>
 </div>
