--- a/src/app/members/member-list/member-list.component.css
+++ b/src/app/members/member-list/member-list.component.css
@@ -8,6 +8,18 @@ input[type=number] {
     -moz-appearance:textfield;
 }
 
+.dropdown-toggle, .dropdown-item {
+    cursor: pointer;
+}
+
+.dropdown-item {
+    text-transform: capitalize;
+}
+
+.dropdown-toggle {
+    text-decoration: none;
+}
+
 button:focus { 
     outline: none !important; 
     box-shadow: none !important; 
