--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -24,7 +24,7 @@
         [(ngModel)]="userParams.maxAge"
       >
     </div>
-    <div class="form-group px-2">
+    <div class="form-group form-inline px-2">
       <label>Show </label>
       <select name="gender" style="width: 139px; height: 40px;" [(ngModel)]="userParams.gender" class="form-control ml-1">
         <option *ngFor="let gender of genderList" [value]="gender.value">
@@ -32,9 +32,32 @@
         </option>
       </select>
     </div>
-    <button id="apply-button" class="btn-sm btn-primary ml-1" type="submit">Apply Filters</button>
+    <button id="apply-button" class="btn-sm form-inline btn-primary ml-1" type="submit">Apply Filters</button>
     <button (click)="resetFilters()" class="btn-sm btn-info ml-1" type="submit">Reset Filters</button>
   </form>
+</div>
+<div class="dropdown d-flex flex-row mb-3" dropdown>
+  <a class="dropdown-toggle" dropdownToggle>Sort By</a>
+  <div class="dropdown-menu mt-2" *dropdownMenu>
+    <button 
+      class="btn dropdown-item" 
+      btnRadio="lastActive" 
+      name="orderBy" 
+      type="button" 
+      (click)="loadMembers()" 
+      [(ngModel)]="userParams.orderBy"
+    >Last Active
+    </button>
+    <button 
+      class="btn dropdown-item" 
+      btnRadio="created" 
+      name="orderBy" 
+      type="button" 
+      (click)="loadMembers()" 
+      [(ngModel)]="userParams.orderBy"
+    >Created Date
+    </button>
+  </div>
 </div>
 <div class="row">
   <div *ngFor="let member of members" class="col-2">
@@ -52,6 +75,6 @@
     nextText="&rsaquo;"
     firstText="&laquo;"
     lastText="&raquo;"
->
-</pagination>
+  >
+  </pagination>
 </div>
