Formating dates using TimeAgo package

--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -17,11 +17,11 @@
         </div>
         <div>
           <strong>Member since: </strong>
-          <p>{{member.created | date}}</p>
+          <p>{{member.created | timeago:"false"}}</p>
         </div>
         <div>
           <strong>Last Active: </strong>
-          <p>{{member.lastActive | date}}</p>
+          <p>{{member.lastActive | timeago:"false"}}</p>
         </div>
       </div>
       <div class="card-footer">
