--- a/src/app/members/member-card/member-card.component.html
+++ b/src/app/members/member-card/member-card.component.html
@@ -8,7 +8,7 @@
                 </button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary btn-sm">
+                <button class="btn btn-primary btn-sm" (click)="addLike(member)">
                     <i class="fa fa-heart"></i>
                 </button>
             </li>
