--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,3 +1,32 @@
-<p>
-  lists works!
-</p>
+<div class="text-center">
+  <h2 class="">{{predicate === 'liked' ? 'Members you like' : 'Member who like you'}}</h2>
+</div>
+<div class="dropdown d-flex flex-row mb-3 mt-5" dropdown>
+  <a class="dropdown-toggle" dropdownToggle>Filter By</a>
+  <div class="dropdown-menu mt-2" *dropdownMenu>
+    <button 
+      class="btn dropdown-item" 
+      btnRadio="liked" 
+      type="button" 
+      (click)="loadLikes()" 
+      [(ngModel)]="predicate"
+    >Members i like
+    </button>
+    <button 
+      class="btn dropdown-item" 
+      btnRadio="likedBy"  
+      type="button" 
+      (click)="loadLikes()" 
+      [(ngModel)]="predicate"
+    >Members who like me
+    </button>
+  </div>
+</div>
+<div class="row mt-3">
+  <div class="col-2" *ngFor="let member of members">
+    <app-member-card [member]="member" *ngIf="members?.length > 0"></app-member-card>
+  </div>
+</div>
+<div *ngIf="members.length <= 0" class="mt-3 text-center">
+  <p>{{predicate === 'liked' ? 'You have not given a like to any other member' : 'You have not received any likes yet'}}</p>
+</div>
