--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h2 class="">{{predicate === 'liked' ? 'Members you like' : 'Member who like you'}}</h2>
+  <h2 class="">{{likeParams.predicate === 'liked' ? 'Members you like' : 'Member who like you'}}</h2>
 </div>
 <div class="dropdown d-flex flex-row mb-3 mt-5" dropdown>
   <a class="dropdown-toggle" dropdownToggle>Filter By</a>
@@ -9,7 +9,7 @@
       btnRadio="liked" 
       type="button" 
       (click)="loadLikes()" 
-      [(ngModel)]="predicate"
+      [(ngModel)]="likeParams.predicate"
     >Members i like
     </button>
     <button 
@@ -17,7 +17,7 @@
       btnRadio="likedBy"  
       type="button" 
       (click)="loadLikes()" 
-      [(ngModel)]="predicate"
+      [(ngModel)]="likeParams.predicate"
     >Members who like me
     </button>
   </div>
@@ -27,6 +27,21 @@
     <app-member-card [member]="member" *ngIf="members?.length > 0"></app-member-card>
   </div>
 </div>
-<div *ngIf="members.length <= 0" class="mt-3 text-center">
-  <p>{{predicate === 'liked' ? 'You have not given a like to any other member' : 'You have not received any likes yet'}}</p>
+<div *ngIf="members?.length <= 0" class="mt-3 text-center">
+  <p>{{likeParams.predicate === 'liked' ? 'You have not given a like to any other member' : 'You have not received any likes yet'}}</p>
+</div>
+<div class="d-flex justify-content-center" *ngIf="pagination">
+  <pagination
+    *ngIf="members?.length > 0"
+    [boundaryLinks]="true"
+    [totalItems]="pagination.totalItems"
+    [itemsPerPage]="pagination.itemsPerPage"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    previousText="&lsaquo;"
+    nextText="&rsaquo;"
+    firstText="&laquo;"
+    lastText="&raquo;"
+  >
+  </pagination>
 </div>
