--- a/src/app/messages/messages/messages.component.html
+++ b/src/app/messages/messages/messages.component.html
@@ -1,3 +1,63 @@
-<div class="row mb-4">
-  div.btn-group
+<app-dropdown-filter
+  class="mb-7"
+  [dropdownName]="'Messages'"
+  [params]="container"
+  (filterClicked)="filterClicked($event)"
+  [btn1RadioName]="'Unread'"
+  [btn2RadioName]="'Inbox'"
+  [btn3RadioName]="'Outbox'"
+  [field1Name]="'Unread'"
+  [field2Name]="'Inbox'"
+  [field3Name]="'Outbox'"
+></app-dropdown-filter>
+<div class="row mt-3 text-center" *ngIf="messages?.length <= 0">
+  <p>No messages</p>
 </div>
+<div class="row" *ngIf="messages?.length > 0">
+  <table class="table table-hover" style="cursor: pointer;">
+    <tr>
+      <th style="width: 40%;">Message</th>
+      <th style="width: 20%;">From / To</th>
+      <th style="width: 20%;">Sent / Received</th>
+      <th style="width: 20%;"></th>
+    </tr>
+    <tr 
+      *ngFor="let message of messages" 
+      routerLink="{{
+        container === 'Outbox' 
+        ? '/members/' + message.recipientUsername 
+        : '/members/' + message.senderUsername
+      }}">
+      <td>{{message.content}}</td>
+      <td>
+        <div *ngIf="container === 'Outbox'">
+          <img
+            class="img-circle rounded-circle mr-2" 
+            src="{{message.recipientPhotoUrl || './assets/user.png'}}" 
+            alt="{{message.recipientUsername}}"
+          >
+          <strong>{{message.recipientUsername | titlecase}}</strong>
+        </div>
+        <div *ngIf="container !== 'Outbox'">
+          <img
+            class="img-circle rounded-circle mr-2" 
+            src="{{message.sendPhotoUrl || './assets/user.png'}}" 
+            alt="{{message.senderUsername}}"
+          >
+          <strong>{{message.senderUsername | titlecase}}</strong>
+        </div>
+      </td>
+      <td>{{message.dateSent | timeago}}</td>
+      <td>
+        <button id="delete-button" class="btn btn-sm btn-danger">
+          <i style="color: red;" class="fa fa-trash fa-2x"></i>
+      </button>
+      </td>
+    </tr>
+  </table>
+</div>
+<app-pagination-field
+  [pagination]="pagination"
+  [members]="messages"
+  (pageChangedEvent)="pageChanged($event)"
+></app-pagination-field>
