--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 /* @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 */
 
-@import '../node_modules/font-awesome/css/font-awesome.min.css';
+/* @import '../node_modules/font-awesome/css/font-awesome.min.css'; */
 
 
 .tab-panel {
