Changing message input and text styles

--- a/src/app/members/member-messages/member-messages.component.css
+++ b/src/app/members/member-messages/member-messages.component.css
@@ -19,6 +19,10 @@
     max-height: 50px;
 }
 
-input {
-    border: none;
+
+input:focus {
+    outline:none! important;
+    border: 0;
+    outline: 0;
+    box-shadow: none;
 }
