--- a/src/app/auth/components/nav/nav.component.html
+++ b/src/app/auth/components/nav/nav.component.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" tabindex="-1" aria-disabled="true" routerLink="/messages"  routerLinkActive='active'>Messages</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link"  aria-disabled="true" routerLink="/admin"  routerLinkActive='active'>Admin</a>
+        </li>
       </ng-container>
     </ul>
     <div class="dropdown" *ngIf="(currentUser$ | async) as user" dropdown>
