--- a/src/app/admin/admin-panel/admin-panel.component.html
+++ b/src/app/admin/admin-panel/admin-panel.component.html
@@ -1,3 +1,11 @@
-<p>
-  admin-panel works!
-</p>
+<h2>Admin Panel</h2>
+<div class="tab-panel">
+  <tabset class="member-tabset">
+    <tab heading="User management" *appHasRole='["Admin"]'>
+      <app-user-management></app-user-management>
+    </tab>
+    <tab heading="Photo management" *appHasRole='["Admin", "Moderator"]'>
+      <app-photo-management></app-photo-management>
+    </tab>
+  </tabset>
+</div>
